dist_man1_MANS=

if BUILD_mkscoinD
  dist_man1_MANS+=Mkscoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=Mkscoin-qt.1
endif

if BUILD_mkscoin_CLI
  dist_man1_MANS+=Mkscoin-cli.1
endif

if BUILD_mkscoin_TX
  dist_man1_MANS+=Mkscoin-tx.1
endif

if ENABLE_WALLET
if BUILD_mkscoin_WALLET
  dist_man1_MANS+=Mkscoin-wallet.1
endif
endif
